2005-06-09
----------
* sendmail fixes (Immo Goltz)
* ensure that the correct RRA is always chosen
* nice -19 for mailgraph.pl in example init script (Alexander Norman)

2005-06-05
----------
* released version 1.11
* add support for clamsmtpd (Aaron Wolfe)
* add support for AVMilter (Stephan A. Klein)
* add chkconfig to init script (DanielC)
* add support for bogofilter (Erwan David)
* add support for Kaspersky anti SPAM (Igor Moskovko)
* add --virbl-is-spam (Cyriel de Grijs)
* detect as virus mails blocked by amavis by file-extension
* sendmail fixes (Alexander Bochmann)
* compatibility with RRDtool 1.2.x

2005-04-07
----------
* document the --logtypes

2005-01-24
----------
* recognize postfix/error bounces
* --daemon-rrd is now always respected (also without --daemon) 

2004-11-04
----------
* ignore per-recipient log entries of new amavisd-new versions

2004-10-21
----------
* released version 1.10
* dspam support (Nagilum)
* change CGI to use parameters instead of PATH_INFO, which not all web-servers support

2004-10-04
----------
* Avoid showing "milli-messages/s" on the y scale (R.M. Evers)
* Added --rbl-is-spam flag (David Gibbs)
* Sendmail fixes (David Gibbs)
* amavisd-new <= 20030616 (R.M. Evers)

2004-08-18
----------
* Sendmail fixes (David Gibbs)
* Line intead of area for rejects

2004-07-11
----------
* released version 1.9
* implemented --ignore-host=HOST (use it instead of --ignore-localhost if the
  antivirus is on another machine)
* add automatic refresh to mailgraph.cgi (Frederic Massot)
* reorganized  RRDs::graph call to make it easier to move one line from the normal
  plot to the error plot and vice versa
* --only-virus-rrd bugfix (Marlon Dutra)
* support metalog with --type=metalog and FreeBSD's verbose logging (Parse::Syslog 1.04)

2004-05-06
----------
* cosmetic changes of the CGI output
* show with commented code how to tag as spam all RBL rejects
  (Philip Hallstrom)

2004-04-03
----------