@@ -1,3 +1,7 @@
+2005-08-15
+----------
+* add support for newer Vexira versions (Alexandru Suchici)
+
 2005-06-09
 ----------
 * sendmail fixes (Immo Goltz)
